@@ -17,6 +17,9 @@ Revision history for AnyEvent::IRC
 	- Renamed from Net::IRC3 to AnyEvent::IRC
         - Using Object::Event, AnyEvent::Socket and AnyEvent::Handle
         - added buffer_empty event, to detect when the write buffer is empty.
+        - changed send_msg() in that way that the prefix can't be given anymore,
+          as AnyEvent::IRC is specialized on clients anyway.
+        - Renamed AnyEvent::IRC::Client::Connection to AnyEvent::IRC::Client
 
 0.5     Sun Mar 11 23:54:10 CET 2007
         - added server password support
